--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.3.4",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "jest": "^29.4.3"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
