--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         node-version: 19.x
         cache: 'npm'
     - run: yarn install --frozen-lockfile
-    - run: npm test
+    - run: yarn test
       env:
         apiServer: ${{ secrets.APISERVER }}
         apiKey: ${{ secrets.APIKEY }}
