--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
-    "jest": "^29.4.3"
+    "jest": "^29.4.3",
+    "underscore": "^1.13.6"
   },
   "scripts": {
     "test": "jest"
