--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
     "jest": "^29.4.3",
-    "underscore": "^1.13.6"
+    "lodash": "^4.17.21"
   },
   "scripts": {
     "test": "jest"
