--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-visionect",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Thin nodejs client around the Visionect Server Management API",
   "main": "index.js",
   "repository": "git@github.com:pathikrit/node-visionect.git",
@@ -13,6 +13,6 @@
     "lodash": "^4.17.21"
   },
   "scripts": {
-    "test": "jest --forceExit"
+    "test": "jest"
   }
 }
