--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.3.4",
+    "axios-curlirize": "^2.0.0",
     "dotenv": "^16.0.3",
     "jest": "^29.4.3",
     "lodash": "^4.17.21"
