--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "node-visionect",
-  "version": "0.0.4",
+  "version": "0.0.5",
+  "type": "module",
   "description": "Thin nodejs client around the Visionect Server Management API",
   "main": "index.js",
   "repository": "git@github.com:pathikrit/node-visionect.git",
