--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.3.4",
-    "axios-curlirize": "~1.3.7",
-    "dotenv": "^16.0.3",
-    "jest": "^29.4.3",
     "lodash": "^4.17.21"
   },
   "scripts": {
     "test": "jest"
+  },
+  "devDependencies": {
+    "axios-curlirize": "~1.3.7",
+    "dotenv": "^16.0.3",
+    "jest": "^29.5.0"
   }
 }
